@@ -1,5 +1,5 @@
 /**
- * Copyright © 2016-2021 The Thingsboard Authors
+ * Copyright © 2016-2025 The Thingsboard Authors
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -15,32 +15,40 @@
  */
 package org.thingsboard.server.queue.discovery;
 
+import jakarta.annotation.PostConstruct;
 import lombok.Getter;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.ApplicationContext;
 import org.springframework.stereotype.Component;
-import org.springframework.util.StringUtils;
+import org.thingsboard.server.common.data.StringUtils;
 import org.thingsboard.server.common.data.TbTransportService;
-import org.thingsboard.server.common.data.id.TenantId;
+import org.thingsboard.server.common.data.job.JobType;
+import org.thingsboard.server.common.data.util.CollectionsUtil;
 import org.thingsboard.server.common.msg.queue.ServiceType;
 import org.thingsboard.server.gen.transport.TransportProtos;
 import org.thingsboard.server.gen.transport.TransportProtos.ServiceInfo;
-import org.thingsboard.server.queue.settings.TbQueueRuleEngineSettings;
-import org.thingsboard.server.queue.settings.TbRuleEngineQueueConfiguration;
+import org.thingsboard.server.queue.edqs.EdqsConfig;
+import org.thingsboard.server.queue.task.TaskProcessor;
 import org.thingsboard.server.queue.util.AfterContextReady;
 
-import javax.annotation.PostConstruct;
 import java.net.InetAddress;
 import java.net.UnknownHostException;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
-import java.util.Optional;
+import java.util.Set;
 import java.util.UUID;
 import java.util.stream.Collectors;
+
+import static org.thingsboard.common.util.SystemUtil.getCpuCount;
+import static org.thingsboard.common.util.SystemUtil.getCpuUsage;
+import static org.thingsboard.common.util.SystemUtil.getDiscSpaceUsage;
+import static org.thingsboard.common.util.SystemUtil.getMemoryUsage;
+import static org.thingsboard.common.util.SystemUtil.getTotalDiscSpace;
+import static org.thingsboard.common.util.SystemUtil.getTotalMemory;
+
 
 @Component
 @Slf4j
@@ -55,17 +63,23 @@ public class DefaultTbServiceInfoProvider implements TbServiceInfoProvider {
     private String serviceType;
 
     @Getter
-    @Value("${service.tenant_id:}")
-    private String tenantIdStr;
+    @Value("${service.rule_engine.assigned_tenant_profiles:}")
+    private Set<UUID> assignedTenantProfiles;
 
     @Autowired(required = false)
-    private TbQueueRuleEngineSettings ruleEngineSettings;
+    private EdqsConfig edqsConfig;
+
     @Autowired
     private ApplicationContext applicationContext;
 
+    @Autowired(required = false)
+    private List<TaskProcessor<?, ?>> availableTaskProcessors;
+
     private List<ServiceType> serviceTypes;
+    private List<JobType> taskTypes;
     private ServiceInfo serviceInfo;
-    private TenantId isolatedTenant;
+
+    private boolean ready = true;
 
     @PostConstruct
     public void init() {
@@ -73,39 +87,31 @@ public class DefaultTbServiceInfoProvider implements TbServiceInfoProvider {
             try {
                 serviceId = InetAddress.getLocalHost().getHostName();
             } catch (UnknownHostException e) {
-                serviceId = org.apache.commons.lang3.RandomStringUtils.randomAlphabetic(10);
+                serviceId = StringUtils.randomAlphabetic(10);
             }
         }
         log.info("Current Service ID: {}", serviceId);
-        if (serviceType.equalsIgnoreCase("monolith")) {
-            serviceTypes = Collections.unmodifiableList(Arrays.asList(ServiceType.values()));
-        } else {
-            serviceTypes = Collections.singletonList(ServiceType.of(serviceType));
+        serviceTypes = isMonolith() ?
+                List.of(ServiceType.values()) :
+                Collections.singletonList(ServiceType.of(serviceType));
+        if (!serviceTypes.contains(ServiceType.TB_RULE_ENGINE) || assignedTenantProfiles == null) {
+            assignedTenantProfiles = Collections.emptySet();
         }
-        ServiceInfo.Builder builder = ServiceInfo.newBuilder()
-                .setServiceId(serviceId)
-                .addAllServiceTypes(serviceTypes.stream().map(ServiceType::name).collect(Collectors.toList()));
-        UUID tenantId;
-        if (!StringUtils.isEmpty(tenantIdStr)) {
-            tenantId = UUID.fromString(tenantIdStr);
-            isolatedTenant = new TenantId(tenantId);
-        } else {
-            tenantId = TenantId.NULL_UUID;
-        }
-        builder.setTenantIdMSB(tenantId.getMostSignificantBits());
-        builder.setTenantIdLSB(tenantId.getLeastSignificantBits());
-
-        if (serviceTypes.contains(ServiceType.TB_RULE_ENGINE) && ruleEngineSettings != null) {
-            for (TbRuleEngineQueueConfiguration queue : ruleEngineSettings.getQueues()) {
-                TransportProtos.QueueInfo queueInfo = TransportProtos.QueueInfo.newBuilder()
-                        .setName(queue.getName())
-                        .setTopic(queue.getTopic())
-                        .setPartitions(queue.getPartitions()).build();
-                builder.addRuleEngineQueues(queueInfo);
+        if (serviceTypes.contains(ServiceType.EDQS)) {
+            ready = false;
+            if (StringUtils.isBlank(edqsConfig.getLabel())) {
+                edqsConfig.setLabel(serviceId);
             }
         }
+        if (CollectionsUtil.isNotEmpty(availableTaskProcessors)) {
+            taskTypes = availableTaskProcessors.stream()
+                    .map(TaskProcessor::getJobType)
+                    .toList();
+        } else {
+            taskTypes = Collections.emptyList();
+        }
 
-        serviceInfo = builder.build();
+        generateNewServiceInfoWithCurrentSystemInfo();
     }
 
     @AfterContextReady
@@ -127,12 +133,51 @@ public class DefaultTbServiceInfoProvider implements TbServiceInfoProvider {
     }
 
     @Override
+    public boolean isMonolith() {
+        return serviceType.equalsIgnoreCase("monolith");
+    }
+
+    @Override
     public boolean isService(ServiceType serviceType) {
         return serviceTypes.contains(serviceType);
     }
 
     @Override
-    public Optional<TenantId> getIsolatedTenant() {
-        return Optional.ofNullable(isolatedTenant);
+    public ServiceInfo generateNewServiceInfoWithCurrentSystemInfo() {
+        ServiceInfo.Builder builder = ServiceInfo.newBuilder()
+                .setServiceId(serviceId)
+                .addAllServiceTypes(serviceTypes.stream().map(ServiceType::name).collect(Collectors.toList()))
+                .setSystemInfo(getCurrentSystemInfoProto());
+        if (CollectionsUtil.isNotEmpty(assignedTenantProfiles)) {
+            builder.addAllAssignedTenantProfiles(assignedTenantProfiles.stream().map(UUID::toString).collect(Collectors.toList()));
+        }
+        if (edqsConfig != null) {
+            builder.setLabel(edqsConfig.getLabel());
+        }
+        builder.setReady(ready);
+        builder.addAllTaskTypes(taskTypes.stream().map(JobType::name).toList());
+        return serviceInfo = builder.build();
     }
+
+    @Override
+    public boolean setReady(boolean ready) {
+        boolean changed = this.ready != ready;
+        this.ready = ready;
+        return changed;
+    }
+
+    private TransportProtos.SystemInfoProto getCurrentSystemInfoProto() {
+        TransportProtos.SystemInfoProto.Builder builder = TransportProtos.SystemInfoProto.newBuilder();
+
+        getCpuUsage().ifPresent(builder::setCpuUsage);
+        getMemoryUsage().ifPresent(builder::setMemoryUsage);
+        getDiscSpaceUsage().ifPresent(builder::setDiskUsage);
+
+        getCpuCount().ifPresent(builder::setCpuCount);
+        getTotalMemory().ifPresent(builder::setTotalMemory);
+        getTotalDiscSpace().ifPresent(builder::setTotalDiscSpace);
+
+        return builder.build();
+    }
+
 }
